@@ -1,27 +1,28 @@
 package px.main.seguranca.modelos;
 
-import static javax.persistence.GenerationType.IDENTITY;
-
 import java.util.ArrayList;
 import java.util.List;
 
-import javax.persistence.CascadeType;
-import javax.persistence.Entity;
-import javax.persistence.FetchType;
-import javax.persistence.GeneratedValue;
-import javax.persistence.Id;
-import javax.persistence.JoinColumn;
-import javax.persistence.JoinTable;
-import javax.persistence.ManyToMany;
-import javax.persistence.OneToMany;
-import javax.persistence.Table;
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.JoinTable;
+import jakarta.persistence.ManyToMany;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.Table;
+
+
 
 @Entity
 @Table(name = "grupos")
 public class Grupo {
 
 	@Id
-	@GeneratedValue(strategy = IDENTITY)
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
 	int id;
 	String nome;
 
@@ -98,8 +99,8 @@ public class Grupo {
 
 	@Override
 	public String toString() {
-		return String.format("{id:%s, nome:%s, regras:%s, usuarios:%s}", id,
-				nome, regras, usuarios);
+		return "{id:%s, nome:%s, regras:%s, usuarios:%s}".formatted(id,
+                nome, regras, usuarios);
 	}
 
 
